[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/menu/painel_style_blue.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/Images/Blasters/hydro.png" type="Texture" id=2]
[ext_resource path="res://TutorialWindow.gd" type="Script" id=3]
[ext_resource path="res://assets/Font/text_ui.tres" type="DynamicFont" id=5]

[node name="TutorialWindow" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -128.0
margin_right = 100.0
margin_bottom = 172.0
rect_min_size = Vector2( 500, 300 )
mouse_filter = 2
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -14.0
margin_right = -10.0
margin_bottom = -18.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 480.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 5 )
text = "Você construiu a "
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 480.0
margin_bottom = 109.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer"]
margin_left = 220.0
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 250, 9 )
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 119.0
margin_right = 480.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.945098, 1, 0.0392157, 1 )
text = "ENGENHOCA ELÉTRICA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 480.0
margin_bottom = 201.0
custom_fonts/font = ExtResource( 5 )
text = "COM ELA VOCÊ PODE ATIVAR CIRCUITOS DE ELEVADORES!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 211.0
margin_right = 480.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 5 )
text = "APERTE X PARA USAR, SEGURE X PARA LANÇAR MAIS LONGE"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
[connection signal="focus_entered" from="." to="." method="_on_TutorialWindow_focus_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
